Update: add translations @ StramOverview.